# yumo-yumo-app

./: .cursorignore  .cursorrules  .gitignore  .npmrc  LICENSE  README.md  YUMO_APP_UX_SWOT.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  taxonomy_insert.sql  tsconfig.json  tsconfig.tsbuildinfo  update-solana-tools.sh  vercel.json
.github/workflows/: sync-public-mirror.yml
app/: globals.css  layout.tsx  manifest.ts
components/: cookie-consent-banner.tsx  dom-error-handler.tsx  error-boundary.tsx  footer.tsx  google-translate-blocker.tsx  hero-section.tsx  how-it-works.tsx  language-selector.tsx  navigation.tsx  papers-section.tsx  recent-activity.tsx  roadmap-cards.tsx  roadmap-section.tsx  session-provider.tsx  stats-cards.tsx  stats-overview.tsx  token-distribution.tsx  tokenomics-section.tsx  wagmi-provider.tsx  waitlist-modal.tsx  wallet-connect-button.tsx
config/: account-level-config.ts  cpi-config.ts  income-bands.ts  oracle-phases.ts  reward-formula.ts  season-level-config.ts  site-content.ts  slot-config.ts  upload-window.ts
data/: .gitignore  economic-indices-template.xlsx  yeni-sistem.csv
docs/: ui-map-visual.json  ui-map.json
lib/: design-tokens.ts  scheduled-deletion.ts  wagmi-config.ts
messages/: en.json  es.json  ru.json  th.json  tr.json  zh.json
public/: sw.js
tooling/: backfill-gemini-line-items-from-blob.ts  receipt-analyze-regression.ts
yumo-contracts/: Anchor.toml  Cargo.toml
yumo-contracts/programs/yumo-tokens/: Cargo.toml
yumo-contracts/programs/yumo-tokens/src/: lib.rs
(+447 files in other folders)
