[package]
name = "yumo-tokens"
version = "0.1.0"
description = "aYUMO, rYUMO, YUMO token minting and claiming"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yumo_tokens"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
